[gd_scene load_steps=11 format=3 uid="uid://22wqyagj34vv"]

[ext_resource type="Script" path="res://scenes/level_select_scene.gd" id="1_1w8nv"]
[ext_resource type="PackedScene" uid="uid://ccwao5x8nsffy" path="res://scenes/level/Koenig.tscn" id="2_5ougr"]
[ext_resource type="PackedScene" uid="uid://cbfr4vf4q4txf" path="res://scenes/level/hase.tscn" id="3_4512k"]
[ext_resource type="PackedScene" uid="uid://b4blrdjthcxnn" path="res://ui/components/game_logo.tscn" id="4_0grcg"]
[ext_resource type="PackedScene" uid="uid://ouix3th1cui8" path="res://scenes/level/Fuss.tscn" id="4_ahrv8"]
[ext_resource type="PackedScene" uid="uid://caqmnyi1wmxb8" path="res://scenes/level/Face.tscn" id="5_ch5gn"]
[ext_resource type="PackedScene" uid="uid://bkk87o2ooo6at" path="res://ui/overlays/fade_overlay.tscn" id="5_pbsl3"]
[ext_resource type="AudioStream" uid="uid://7ikto0y647qw" path="res://music/corgie-title.ogg" id="6_avqsf"]
[ext_resource type="PackedScene" uid="uid://dv2y18ye8j7o0" path="res://scenes/main_menu_scene.tscn" id="6_qtqvu"]

[sub_resource type="LabelSettings" id="LabelSettings_2ikbh"]
font_size = 8
font_color = Color(1, 1, 1, 0.486275)

[node name="MainMenuScene2" type="Node2D"]
script = ExtResource("1_1w8nv")
koenig_scene = ExtResource("2_5ougr")
hase_scene = ExtResource("3_4512k")
fuss_scene = ExtResource("4_ahrv8")
face_scene = ExtResource("5_ch5gn")
menu_scene = ExtResource("6_qtqvu")

[node name="UI" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="GameLogo" parent="UI/CenterContainer/VBoxContainer" instance=ExtResource("4_0grcg")]
layout_mode = 2

[node name="Koenig" type="Button" parent="UI/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "koenig"

[node name="Hase" type="Button" parent="UI/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "hase"

[node name="Fuss" type="Button" parent="UI/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "fuss"

[node name="Face" type="Button" parent="UI/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "godot"

[node name="Back" type="Button" parent="UI/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "back"

[node name="Credits" type="MarginContainer" parent="UI/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_top = 10

[node name="Label" type="Label" parent="UI/CenterContainer/VBoxContainer/Credits"]
layout_mode = 2
text = "credits"
label_settings = SubResource("LabelSettings_2ikbh")
horizontal_alignment = 1

[node name="FadeOverlay" parent="UI" instance=ExtResource("5_pbsl3")]
unique_name_in_owner = true
visible = false
fade_in_duration = 0.5
fade_out_duration = 0.5

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_avqsf")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/Koenig" to="." method="_on_koenig_pressed"]
[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/Hase" to="." method="_on_hase_pressed"]
[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/Fuss" to="." method="_on_fuss_pressed"]
[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/Face" to="." method="_on_face_pressed"]
[connection signal="pressed" from="UI/CenterContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
